syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/artnikel/TradingService/proto";

message Deal {
    string DealID = 1;
	double SharesCount = 2;
	string ProfileID = 3;
	string Company = 4;
	double PurchasePrice = 5;
	double StopLoss = 6;
	double TakeProfit = 7;
    google.protobuf.Timestamp DealTime = 8;
    google.protobuf.Timestamp EndDealTime = 9;
	double Profit = 10;
}

message TradingBalance {
    string BalanceID = 1;
    string ProfileID = 2;
    double Operation = 3;
}

message TradingShare {
    string Company = 1;
    double Price = 2;
}

service TradingService {
    rpc GetProfit(GetProfitRequest) returns (GetProfitResponse);
    rpc ClosePosition(ClosePositionRequest) returns (ClosePositionResponse);
    rpc GetUnclosedPositions(GetUnclosedPositionsRequest) returns (GetUnclosedPositionsResponse);
}

message GetProfitRequest{
    string strategy = 1;
    Deal deal = 2;
}

message GetProfitResponse{
    double Profit = 1;
}

message ClosePositionRequest{
    string strategy = 1;
    TradingShare share = 2;
    Deal deal = 3;
    TradingBalance balance = 4;
}

message ClosePositionResponse{}

message GetUnclosedPositionsRequest{
    string profileid = 1;
}

message GetUnclosedPositionsResponse{
    repeated Deal deal = 1;
}